# soil

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SOIL Tutorial.ipynb  SpreadModelM2_397.gexf  SpreadModelM2_483.gexf  SpreadModelM2_716.gexf  TerroristNetworkModel.py  TerroristNetworkModel.yml  clase_base.py  config.yml  config_copy.yml  data.txt  debug.py  docker-compose.yml  models.py  models_org.py  pyproject.toml  requirements.txt  run.py  server.py  settings.json  settings.py  settings_org.py  setup.cfg  setup.py  simulation.yml  simulation_settings.json  simulator.py  soil.py  soil.py~  soil_tutorial.ipynb  test-requirements.txt  test.gexf  (+1 more)
benchmarks/: noop-bench-async.csv  noop-bench.csv  run.py  virusonnetwork.csv
docs/: Makefile  Tutorial - Spreading news.rst  conf.py  configuration.rst  example.yml  index.rst  installation.rst  make.bat  mesa.rst  models.rst  notes_v0.30.rst  notes_v1.0.rst  quickstart.rst  quickstart.yml  requirements.txt  soil-vs.rst  soil_tutorial.rst  usage.rst
examples/: NewsSpread.ipynb  README.md  Untitled.ipynb  complete.yml  complete_opt2.yml  custom.yml  custom_agents.py  custom_timeouts_sim.py  template.yml  torvalds.edgelist  torvalds.yml  torvalds_sim.py
models/: __init__.py  models.py
notebooks/: Tutorial - Spreading news.ipynb
sim_01/: log.0.state.pickled  log.1.state.pickled  log.10.state.pickled  log.11.state.pickled  log.12.state.pickled  log.13.state.pickled  log.14.state.pickled  log.15.state.pickled  log.16.state.pickled  log.17.state.pickled  (+19 more)
(+188 files in other folders)
