[tool.poetry]
name = "soil"
version = "1.0.0rc11"
description = "An Agent-Based Social Simulator for Social Networks"
authors = ["J. Fernando Sánchez"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = ">=2.5"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pyyaml = ">=5.1"
pandas = ">=1"
salib = ">=1.3"
jinja2 = "^3.1.3"
mesa = ">=1.2"
pydantic = ">=1.9"
sqlalchemy = ">=1.4"
typing-extensions = ">=4.4"
annotated-types = ">=0.4"
tqdm = ">=4.64"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-profiling = "^1.7.0"
scipy = ">=1.3"
tornado = "^6.4"
nbconvert = "7.3.1"
nbformat = "5.8.0"
jupyter = "1.0.0"
osmnx = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
